2010-11-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c:
   Do not translate 'name' field for filetype None because it is used
   for hash table lookup. This fixes missing files in the Open dialog
   for the 'All files' filter with non-English locales (thanks to Sardem
   FF7).


2010-11-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
   Add sci_get_lexer() to plugin API.
 * plugins/htmlchars.c:
   Only automatically replace characters when the current document is
   a Markup document.
 * plugins/htmlchars.c:
   Rename submenu item labels to be more descriptive.
 * src/keybindings.c:
   Fix Alt+[0-9] switching tabs when other modifiers are also held.
 * src/ui_utils.c:
   Don't allow pasting of numbers followed by other characters in the
   Go to Line dialog/field (patch by Dimitar Zhekov, thanks).
 * src/main.c:
   Print "GIO" and "built-in regex" if enabled with --version.
 * src/document.c:
   Use g_file_replace_contents() if available to save documents - this
   should help workaround bugs in GVFS (based on patch by Alexey
   Antipov, thanks).
   Needs testing.
 * src/templates.c:
   Fix wrongly adding newlines for templates on disk that don't have
   LF line endings when default line endings are not LF, e.g. Windows.


2010-11-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/main.c:
   Remove trailing directory separator for app->datadir and
   app->docdir for consistency with the other directory fields.
 * src/filetypes.c:
   Detect user and system filetype configuration files as Conf
   filetype.
 * src/editor.c:
   Respect 'Smart' home key for Shift+Home (fixes #3100290).


2010-11-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/filetypes.ada:
   Fix comments for Ada. Thanks to Jonas Baggett for reporting.


2010-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * Makefile.am: